# hls-job-server

./: .gitignore  README.md  pyproject.toml
hls_job_server/: main.py
hls_job_server/html_templates/: index.html.jinja
tests/: test.py
tests/test_proj_vitis/: hls_simulation.tcl  hls_synthesis.tcl  kernel.cpp  kernel.h  tb.cpp
